tests/functional2/lang/attrs/eval-okay-5.err.exp
warning: using or as an identifier is deprecated because it cannot be used in most places (try let or = 1; in or). Use --extra-deprecated-features or-as-identifier to disable this warning.
         at /pwd/in.nix:9:3:
              8|
              9|   or = x: y: x || y;
               |   ^
             10|
warning: using or as an argument is deprecated because it is parsed with the wrong precedence which may cause unexpected behavior. Use --extra-deprecated-features or-as-identifier to disable this warning.
         at /pwd/in.nix:23:11:
             22|     # it short-circuits and never runs into the type error
             23|     (fold or [] [true false false])
               |           ^
             24|   ]
